changed fonts, fixed intro spacing

--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@
 /* My custom properties */
 
 :root {
-    --ff-primary: 'Open Sans', sans-serif;
-    --ff-secondary: 'Open Sans', monospace;
+    --ff-primary: 'Ubuntu', sans-serif;
+    --ff-secondary: 'Roboto', sans-serif;
 
     --fw-reg: 300;
     --fw-bold: 900;
@@ -107,14 +107,11 @@ h3 { font-size: var(--fs-h3);}
     margin-bottom: .25em;
 }
 
-.section__subtitle--intro {
-    font-weight: var(--fw-reg);
-}
-
 .section__subtitle {
     margin: 0;
     font-size: var(--fs-h3);
 }
+
 
 .section__subtitle--intro,
 .section__subtitle--my-projects {
@@ -122,6 +119,15 @@ h3 { font-size: var(--fs-h3);}
     padding: 0.25em;
     font-family: var(--ff-secondary);
     margin-bottom: 1em;
+}
+
+.section__title--intro {
+    font-weight: var(--fw-reg);
+    margin-left: 20px;
+}
+
+.section__subtitle--intro {
+    font-weight: var(--fw-reg);
 }
 
 .section__title--my-projects {
